load("@contrib_rules_jvm//java:defs.bzl", "java_library", "java_test_suite")
# gazelle:java_module_granularity module

java_library(
    name = "client",
    srcs = [
        "src/main/java/io/confluent/kafka/schemaregistry/AbstractSchemaProvider.java",
        "src/main/java/io/confluent/kafka/schemaregistry/CompatibilityChecker.java",
        "src/main/java/io/confluent/kafka/schemaregistry/CompatibilityLevel.java",
        "src/main/java/io/confluent/kafka/schemaregistry/ParsedSchema.java",
        "src/main/java/io/confluent/kafka/schemaregistry/SchemaEntity.java",
        "src/main/java/io/confluent/kafka/schemaregistry/SchemaProvider.java",
        "src/main/java/io/confluent/kafka/schemaregistry/SchemaValidationStrategy.java",
        "src/main/java/io/confluent/kafka/schemaregistry/SchemaValidator.java",
        "src/main/java/io/confluent/kafka/schemaregistry/SchemaValidatorBuilder.java",
        "src/main/java/io/confluent/kafka/schemaregistry/annotations/Schema.java",
        "src/main/java/io/confluent/kafka/schemaregistry/annotations/SchemaReference.java",
        "src/main/java/io/confluent/kafka/schemaregistry/avro/AvroCompatibilityChecker.java",
        "src/main/java/io/confluent/kafka/schemaregistry/avro/AvroCompatibilityLevel.java",
        "src/main/java/io/confluent/kafka/schemaregistry/avro/AvroSchema.java",
        "src/main/java/io/confluent/kafka/schemaregistry/avro/AvroSchemaProvider.java",
        "src/main/java/io/confluent/kafka/schemaregistry/avro/AvroSchemaUtils.java",
        "src/main/java/io/confluent/kafka/schemaregistry/avro/Difference.java",
        "src/main/java/io/confluent/kafka/schemaregistry/client/CachedSchemaRegistryClient.java",
        "src/main/java/io/confluent/kafka/schemaregistry/client/MockSchemaRegistryClient.java",
        "src/main/java/io/confluent/kafka/schemaregistry/client/SchemaMetadata.java",
        "src/main/java/io/confluent/kafka/schemaregistry/client/SchemaRegistryClient.java",
        "src/main/java/io/confluent/kafka/schemaregistry/client/SchemaRegistryClientConfig.java",
        "src/main/java/io/confluent/kafka/schemaregistry/client/SchemaRegistryClientFactory.java",
        "src/main/java/io/confluent/kafka/schemaregistry/client/SchemaVersionFetcher.java",
        "src/main/java/io/confluent/kafka/schemaregistry/client/config/provider/SchemaRegistryConfigProvider.java",
        "src/main/java/io/confluent/kafka/schemaregistry/client/rest/RestService.java",
        "src/main/java/io/confluent/kafka/schemaregistry/client/rest/UriBuilder.java",
        "src/main/java/io/confluent/kafka/schemaregistry/client/rest/Versions.java",
        "src/main/java/io/confluent/kafka/schemaregistry/client/rest/entities/Config.java",
        "src/main/java/io/confluent/kafka/schemaregistry/client/rest/entities/ErrorMessage.java",
        "src/main/java/io/confluent/kafka/schemaregistry/client/rest/entities/Metadata.java",
        "src/main/java/io/confluent/kafka/schemaregistry/client/rest/entities/Mode.java",
        "src/main/java/io/confluent/kafka/schemaregistry/client/rest/entities/Rule.java",
        "src/main/java/io/confluent/kafka/schemaregistry/client/rest/entities/RuleKind.java",
        "src/main/java/io/confluent/kafka/schemaregistry/client/rest/entities/RuleMode.java",
        "src/main/java/io/confluent/kafka/schemaregistry/client/rest/entities/RuleSet.java",
        "src/main/java/io/confluent/kafka/schemaregistry/client/rest/entities/Schema.java",
        "src/main/java/io/confluent/kafka/schemaregistry/client/rest/entities/SchemaReference.java",
        "src/main/java/io/confluent/kafka/schemaregistry/client/rest/entities/SchemaRegistryServerVersion.java",
        "src/main/java/io/confluent/kafka/schemaregistry/client/rest/entities/SchemaString.java",
        "src/main/java/io/confluent/kafka/schemaregistry/client/rest/entities/SchemaTypeConverter.java",
        "src/main/java/io/confluent/kafka/schemaregistry/client/rest/entities/ServerClusterId.java",
        "src/main/java/io/confluent/kafka/schemaregistry/client/rest/entities/SubjectVersion.java",
        "src/main/java/io/confluent/kafka/schemaregistry/client/rest/entities/requests/CompatibilityCheckResponse.java",
        "src/main/java/io/confluent/kafka/schemaregistry/client/rest/entities/requests/ConfigUpdateRequest.java",
        "src/main/java/io/confluent/kafka/schemaregistry/client/rest/entities/requests/ModeUpdateRequest.java",
        "src/main/java/io/confluent/kafka/schemaregistry/client/rest/entities/requests/RegisterSchemaRequest.java",
        "src/main/java/io/confluent/kafka/schemaregistry/client/rest/entities/requests/RegisterSchemaResponse.java",
        "src/main/java/io/confluent/kafka/schemaregistry/client/rest/exceptions/RestClientException.java",
        "src/main/java/io/confluent/kafka/schemaregistry/client/rest/utils/UrlList.java",
        "src/main/java/io/confluent/kafka/schemaregistry/client/security/SslFactory.java",
        "src/main/java/io/confluent/kafka/schemaregistry/client/security/basicauth/BasicAuthCredentialProvider.java",
        "src/main/java/io/confluent/kafka/schemaregistry/client/security/basicauth/BasicAuthCredentialProviderFactory.java",
        "src/main/java/io/confluent/kafka/schemaregistry/client/security/basicauth/SaslBasicAuthCredentialProvider.java",
        "src/main/java/io/confluent/kafka/schemaregistry/client/security/basicauth/UrlBasicAuthCredentialProvider.java",
        "src/main/java/io/confluent/kafka/schemaregistry/client/security/basicauth/UserInfoCredentialProvider.java",
        "src/main/java/io/confluent/kafka/schemaregistry/client/security/bearerauth/BearerAuthCredentialProvider.java",
        "src/main/java/io/confluent/kafka/schemaregistry/client/security/bearerauth/BearerAuthCredentialProviderFactory.java",
        "src/main/java/io/confluent/kafka/schemaregistry/client/security/bearerauth/StaticTokenCredentialProvider.java",
        "src/main/java/io/confluent/kafka/schemaregistry/client/security/bearerauth/oauth/CachedOauthTokenRetriever.java",
        "src/main/java/io/confluent/kafka/schemaregistry/client/security/bearerauth/oauth/OauthCredentialProvider.java",
        "src/main/java/io/confluent/kafka/schemaregistry/client/security/bearerauth/oauth/OauthTokenCache.java",
        "src/main/java/io/confluent/kafka/schemaregistry/client/security/bearerauth/oauth/SaslOauthCredentialProvider.java",
        "src/main/java/io/confluent/kafka/schemaregistry/client/security/bearerauth/oauth/exceptions/SchemaRegistryOauthTokenRetrieverException.java",
        "src/main/java/io/confluent/kafka/schemaregistry/rules/DlqAction.java",
        "src/main/java/io/confluent/kafka/schemaregistry/rules/ErrorAction.java",
        "src/main/java/io/confluent/kafka/schemaregistry/rules/FieldRuleExecutor.java",
        "src/main/java/io/confluent/kafka/schemaregistry/rules/FieldTransform.java",
        "src/main/java/io/confluent/kafka/schemaregistry/rules/NoneAction.java",
        "src/main/java/io/confluent/kafka/schemaregistry/rules/RuleAction.java",
        "src/main/java/io/confluent/kafka/schemaregistry/rules/RuleBase.java",
        "src/main/java/io/confluent/kafka/schemaregistry/rules/RuleContext.java",
        "src/main/java/io/confluent/kafka/schemaregistry/rules/RuleException.java",
        "src/main/java/io/confluent/kafka/schemaregistry/rules/RuleExecutor.java",
        "src/main/java/io/confluent/kafka/schemaregistry/testutil/MockSchemaRegistry.java",
        "src/main/java/io/confluent/kafka/schemaregistry/utils/BoundedConcurrentHashMap.java",
        "src/main/java/io/confluent/kafka/schemaregistry/utils/EnumRecommender.java",
        "src/main/java/io/confluent/kafka/schemaregistry/utils/JacksonMapper.java",
        "src/main/java/io/confluent/kafka/schemaregistry/utils/QualifiedSubject.java",
        "src/main/java/io/confluent/kafka/schemaregistry/utils/WildcardMatcher.java",
    ],
    resources = glob([
        "src/main/resources/**/*",
    ]),
    visibility = ["//:__subpackages__"],
    exports = [
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_google_guava_guava",
        "@maven//:org_apache_avro_avro",
        "@maven//:org_apache_kafka_kafka_clients",
    ],
    deps = [
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
        "@maven//:com_fasterxml_jackson_core_jackson_core",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_google_guava_guava",
        "@maven//:io_swagger_core_v3_swagger_annotations",
        "@maven//:org_apache_avro_avro",
        "@maven//:org_apache_kafka_kafka_clients",
        "@maven//:org_slf4j_slf4j_api",
    ],
)

java_test_suite(
    name = "client-tests",
    srcs = [
        "src/test/java/io/confluent/kafka/schemaregistry/client/CachedSchemaRegistryClientTest.java",
        "src/test/java/io/confluent/kafka/schemaregistry/client/config/provider/SchemaRegistryConfigProviderTest.java",
        "src/test/java/io/confluent/kafka/schemaregistry/client/rest/RestServiceTest.java",
        "src/test/java/io/confluent/kafka/schemaregistry/client/rest/ServerClusterIdTest.java",
        "src/test/java/io/confluent/kafka/schemaregistry/client/rest/UriBuilderTest.java",
        "src/test/java/io/confluent/kafka/schemaregistry/client/rest/entities/MergeEntitiesTest.java",
        "src/test/java/io/confluent/kafka/schemaregistry/client/rest/entities/requests/RegisterSchemaRequestTest.java",
        "src/test/java/io/confluent/kafka/schemaregistry/client/rest/utils/UrlListTest.java",
        "src/test/java/io/confluent/kafka/schemaregistry/client/security/SslFactoryTest.java",
        "src/test/java/io/confluent/kafka/schemaregistry/client/security/basicauth/BasicAuthCredentialProviderFactoryTest.java",
        "src/test/java/io/confluent/kafka/schemaregistry/client/security/basicauth/SaslBasicAuthCredentialProviderTest.java",
        "src/test/java/io/confluent/kafka/schemaregistry/client/security/basicauth/UrlBasicAuthCredentialProviderTest.java",
        "src/test/java/io/confluent/kafka/schemaregistry/client/security/basicauth/UserInfoCredentialProviderTest.java",
        "src/test/java/io/confluent/kafka/schemaregistry/client/security/bearerauth/BearerAuthCredentialProviderFactoryTest.java",
        "src/test/java/io/confluent/kafka/schemaregistry/client/security/bearerauth/StaticTokenCredentialProviderTest.java",
        "src/test/java/io/confluent/kafka/schemaregistry/client/security/bearerauth/oauth/CachedOauthTokenRetrieverTest.java",
        "src/test/java/io/confluent/kafka/schemaregistry/client/security/bearerauth/oauth/OauthCredentialProviderTest.java",
        "src/test/java/io/confluent/kafka/schemaregistry/client/security/bearerauth/oauth/OauthTokenCacheTest.java",
        "src/test/java/io/confluent/kafka/schemaregistry/client/security/bearerauth/oauth/SaslOauthCredentialProviderTest.java",
        "src/test/java/io/confluent/kafka/schemaregistry/utils/QualifiedSubjectTest.java",
        "src/test/java/io/confluent/kafka/schemaregistry/utils/WildcardMatcherTest.java",
    ],
    deps = [
        ":client",
        "//core",
        "@maven//:com_google_guava_guava",
        "@maven//:com_google_guava_guava_testlib",
        "@maven//:io_confluent_common_utils",
        "@maven//:junit_junit",
        "@maven//:org_apache_kafka_kafka_clients",
        "@maven//:org_easymock_easymock",
        "@maven//:org_mockito_mockito_core",
        "@maven//:org_mockito_mockito_inline",
    ],
    tags = ["no-java-spotbugs"],
)
