load("@rules_java//java:defs.bzl", "java_proto_library")
load("@contrib_rules_jvm//java:defs.bzl", "java_binary", "java_library", "java_test_suite")
load("@io_bazel_rules_avro//avro:avro.bzl", "avro_gen", "avro_java_library")
# gazelle:java_module_granularity module

load("@confluent_rules//java/swagger-core-bazel:gen.bzl", "generate_openapi_spec")

generate_openapi_spec(
    additional_runtime_deps = [
        "//core:core",
    ],
    config_file = "src/main/resources/openapi.yaml",
    output_files = [
        "generated/swagger-ui/schema-registry-api-spec.yaml",
        ],
    properties_file = "src/main/resources/swagger-core-bazel.properties",
)

java_library(
    name = "core",
    srcs = [
        "src/main/java/io/confluent/kafka/schemaregistry/avro/AvroUtils.java",
        "src/main/java/io/confluent/kafka/schemaregistry/exceptions/IdDoesNotMatchException.java",
        "src/main/java/io/confluent/kafka/schemaregistry/exceptions/IdGenerationException.java",
        "src/main/java/io/confluent/kafka/schemaregistry/exceptions/IncompatibleSchemaException.java",
        "src/main/java/io/confluent/kafka/schemaregistry/exceptions/InvalidSchemaException.java",
        "src/main/java/io/confluent/kafka/schemaregistry/exceptions/InvalidVersionException.java",
        "src/main/java/io/confluent/kafka/schemaregistry/exceptions/OperationNotPermittedException.java",
        "src/main/java/io/confluent/kafka/schemaregistry/exceptions/ReferenceExistsException.java",
        "src/main/java/io/confluent/kafka/schemaregistry/exceptions/SchemaRegistryException.java",
        "src/main/java/io/confluent/kafka/schemaregistry/exceptions/SchemaRegistryInitializationException.java",
        "src/main/java/io/confluent/kafka/schemaregistry/exceptions/SchemaRegistryRequestForwardingException.java",
        "src/main/java/io/confluent/kafka/schemaregistry/exceptions/SchemaRegistryStoreException.java",
        "src/main/java/io/confluent/kafka/schemaregistry/exceptions/SchemaRegistryTimeoutException.java",
        "src/main/java/io/confluent/kafka/schemaregistry/exceptions/SchemaTooLargeException.java",
        "src/main/java/io/confluent/kafka/schemaregistry/exceptions/SchemaVersionNotSoftDeletedException.java",
        "src/main/java/io/confluent/kafka/schemaregistry/exceptions/SubjectNotSoftDeletedException.java",
        "src/main/java/io/confluent/kafka/schemaregistry/exceptions/UnknownLeaderException.java",
        "src/main/java/io/confluent/kafka/schemaregistry/id/IdGenerator.java",
        "src/main/java/io/confluent/kafka/schemaregistry/id/IncrementalIdGenerator.java",
        "src/main/java/io/confluent/kafka/schemaregistry/id/SchemaIdRange.java",
        "src/main/java/io/confluent/kafka/schemaregistry/leaderelector/kafka/ClientConfig.java",
        "src/main/java/io/confluent/kafka/schemaregistry/leaderelector/kafka/KafkaGroupLeaderElector.java",
        "src/main/java/io/confluent/kafka/schemaregistry/leaderelector/kafka/SchemaRegistryCoordinator.java",
        "src/main/java/io/confluent/kafka/schemaregistry/leaderelector/kafka/SchemaRegistryProtocol.java",
        "src/main/java/io/confluent/kafka/schemaregistry/leaderelector/kafka/SchemaRegistryRebalanceListener.java",
        "src/main/java/io/confluent/kafka/schemaregistry/metrics/MetricsContainer.java",
        "src/main/java/io/confluent/kafka/schemaregistry/metrics/SchemaRegistryMetric.java",
        "src/main/java/io/confluent/kafka/schemaregistry/rest/JsonErrorHandler.java",
        "src/main/java/io/confluent/kafka/schemaregistry/rest/Main.java",
        "src/main/java/io/confluent/kafka/schemaregistry/rest/SchemaRegistryConfig.java",
        "src/main/java/io/confluent/kafka/schemaregistry/rest/SchemaRegistryMain.java",
        "src/main/java/io/confluent/kafka/schemaregistry/rest/SchemaRegistryRestApplication.java",
        "src/main/java/io/confluent/kafka/schemaregistry/rest/VersionId.java",
        "src/main/java/io/confluent/kafka/schemaregistry/rest/exceptions/Errors.java",
        "src/main/java/io/confluent/kafka/schemaregistry/rest/exceptions/RestIdDoesNotMatchException.java",
        "src/main/java/io/confluent/kafka/schemaregistry/rest/exceptions/RestIncompatibleSchemaException.java",
        "src/main/java/io/confluent/kafka/schemaregistry/rest/exceptions/RestInvalidCompatibilityException.java",
        "src/main/java/io/confluent/kafka/schemaregistry/rest/exceptions/RestInvalidModeException.java",
        "src/main/java/io/confluent/kafka/schemaregistry/rest/exceptions/RestInvalidRuleSetException.java",
        "src/main/java/io/confluent/kafka/schemaregistry/rest/exceptions/RestInvalidSchemaException.java",
        "src/main/java/io/confluent/kafka/schemaregistry/rest/exceptions/RestInvalidSubjectException.java",
        "src/main/java/io/confluent/kafka/schemaregistry/rest/exceptions/RestInvalidVersionException.java",
        "src/main/java/io/confluent/kafka/schemaregistry/rest/exceptions/RestOperationNotPermittedException.java",
        "src/main/java/io/confluent/kafka/schemaregistry/rest/exceptions/RestReferenceExistsException.java",
        "src/main/java/io/confluent/kafka/schemaregistry/rest/exceptions/RestRequestForwardingException.java",
        "src/main/java/io/confluent/kafka/schemaregistry/rest/exceptions/RestSchemaRegistryException.java",
        "src/main/java/io/confluent/kafka/schemaregistry/rest/exceptions/RestSchemaRegistryStoreException.java",
        "src/main/java/io/confluent/kafka/schemaregistry/rest/exceptions/RestSchemaRegistryTimeoutException.java",
        "src/main/java/io/confluent/kafka/schemaregistry/rest/exceptions/RestSchemaTooLargeException.java",
        "src/main/java/io/confluent/kafka/schemaregistry/rest/exceptions/RestUnknownLeaderException.java",
        "src/main/java/io/confluent/kafka/schemaregistry/rest/extensions/SchemaRegistryResourceExtension.java",
        "src/main/java/io/confluent/kafka/schemaregistry/rest/filters/ContextFilter.java",
        "src/main/java/io/confluent/kafka/schemaregistry/rest/filters/RestCallMetricFilter.java",
        "src/main/java/io/confluent/kafka/schemaregistry/rest/resources/CompatibilityResource.java",
        "src/main/java/io/confluent/kafka/schemaregistry/rest/resources/ConfigResource.java",
        "src/main/java/io/confluent/kafka/schemaregistry/rest/resources/ContextsResource.java",
        "src/main/java/io/confluent/kafka/schemaregistry/rest/resources/DocumentedName.java",
        "src/main/java/io/confluent/kafka/schemaregistry/rest/resources/ModeResource.java",
        "src/main/java/io/confluent/kafka/schemaregistry/rest/resources/RequestHeaderBuilder.java",
        "src/main/java/io/confluent/kafka/schemaregistry/rest/resources/RootResource.java",
        "src/main/java/io/confluent/kafka/schemaregistry/rest/resources/SchemasResource.java",
        "src/main/java/io/confluent/kafka/schemaregistry/rest/resources/ServerMetadataResource.java",
        "src/main/java/io/confluent/kafka/schemaregistry/rest/resources/SubjectVersionsResource.java",
        "src/main/java/io/confluent/kafka/schemaregistry/rest/resources/SubjectsResource.java",
        "src/main/java/io/confluent/kafka/schemaregistry/storage/ClearSubjectKey.java",
        "src/main/java/io/confluent/kafka/schemaregistry/storage/ClearSubjectValue.java",
        "src/main/java/io/confluent/kafka/schemaregistry/storage/CloseableIterator.java",
        "src/main/java/io/confluent/kafka/schemaregistry/storage/CompositeSchemaUpdateHandler.java",
        "src/main/java/io/confluent/kafka/schemaregistry/storage/ConfigKey.java",
        "src/main/java/io/confluent/kafka/schemaregistry/storage/ConfigValue.java",
        "src/main/java/io/confluent/kafka/schemaregistry/storage/ContextKey.java",
        "src/main/java/io/confluent/kafka/schemaregistry/storage/ContextValue.java",
        "src/main/java/io/confluent/kafka/schemaregistry/storage/DelegatingIterator.java",
        "src/main/java/io/confluent/kafka/schemaregistry/storage/DeleteSubjectKey.java",
        "src/main/java/io/confluent/kafka/schemaregistry/storage/DeleteSubjectValue.java",
        "src/main/java/io/confluent/kafka/schemaregistry/storage/InMemoryCache.java",
        "src/main/java/io/confluent/kafka/schemaregistry/storage/KafkaSchemaRegistry.java",
        "src/main/java/io/confluent/kafka/schemaregistry/storage/KafkaStore.java",
        "src/main/java/io/confluent/kafka/schemaregistry/storage/KafkaStoreMessageHandler.java",
        "src/main/java/io/confluent/kafka/schemaregistry/storage/KafkaStoreReaderThread.java",
        "src/main/java/io/confluent/kafka/schemaregistry/storage/LeaderAwareSchemaRegistry.java",
        "src/main/java/io/confluent/kafka/schemaregistry/storage/LeaderElector.java",
        "src/main/java/io/confluent/kafka/schemaregistry/storage/LookupCache.java",
        "src/main/java/io/confluent/kafka/schemaregistry/storage/LookupFilter.java",
        "src/main/java/io/confluent/kafka/schemaregistry/storage/MD5.java",
        "src/main/java/io/confluent/kafka/schemaregistry/storage/Metadata.java",
        "src/main/java/io/confluent/kafka/schemaregistry/storage/Mode.java",
        "src/main/java/io/confluent/kafka/schemaregistry/storage/ModeKey.java",
        "src/main/java/io/confluent/kafka/schemaregistry/storage/ModeValue.java",
        "src/main/java/io/confluent/kafka/schemaregistry/storage/NoopKey.java",
        "src/main/java/io/confluent/kafka/schemaregistry/storage/OffsetCheckpoint.java",
        "src/main/java/io/confluent/kafka/schemaregistry/storage/Rule.java",
        "src/main/java/io/confluent/kafka/schemaregistry/storage/RuleKind.java",
        "src/main/java/io/confluent/kafka/schemaregistry/storage/RuleMode.java",
        "src/main/java/io/confluent/kafka/schemaregistry/storage/RuleSet.java",
        "src/main/java/io/confluent/kafka/schemaregistry/storage/RuleSetHandler.java",
        "src/main/java/io/confluent/kafka/schemaregistry/storage/SchemaIdAndSubjects.java",
        "src/main/java/io/confluent/kafka/schemaregistry/storage/SchemaKey.java",
        "src/main/java/io/confluent/kafka/schemaregistry/storage/SchemaReference.java",
        "src/main/java/io/confluent/kafka/schemaregistry/storage/SchemaRegistry.java",
        "src/main/java/io/confluent/kafka/schemaregistry/storage/SchemaRegistryIdentity.java",
        "src/main/java/io/confluent/kafka/schemaregistry/storage/SchemaRegistryKey.java",
        "src/main/java/io/confluent/kafka/schemaregistry/storage/SchemaRegistryKeyType.java",
        "src/main/java/io/confluent/kafka/schemaregistry/storage/SchemaRegistryValue.java",
        "src/main/java/io/confluent/kafka/schemaregistry/storage/SchemaUpdateHandler.java",
        "src/main/java/io/confluent/kafka/schemaregistry/storage/SchemaValue.java",
        "src/main/java/io/confluent/kafka/schemaregistry/storage/Store.java",
        "src/main/java/io/confluent/kafka/schemaregistry/storage/StoreUpdateHandler.java",
        "src/main/java/io/confluent/kafka/schemaregistry/storage/SubjectKey.java",
        "src/main/java/io/confluent/kafka/schemaregistry/storage/SubjectKeyComparator.java",
        "src/main/java/io/confluent/kafka/schemaregistry/storage/SubjectValue.java",
        "src/main/java/io/confluent/kafka/schemaregistry/storage/TransformedIterator.java",
        "src/main/java/io/confluent/kafka/schemaregistry/storage/encoder/KeysetWrapper.java",
        "src/main/java/io/confluent/kafka/schemaregistry/storage/encoder/KeysetWrapperDeserializer.java",
        "src/main/java/io/confluent/kafka/schemaregistry/storage/encoder/KeysetWrapperSerde.java",
        "src/main/java/io/confluent/kafka/schemaregistry/storage/encoder/KeysetWrapperSerializer.java",
        "src/main/java/io/confluent/kafka/schemaregistry/storage/encoder/MetadataEncoderService.java",
        "src/main/java/io/confluent/kafka/schemaregistry/storage/exceptions/EntryTooLargeException.java",
        "src/main/java/io/confluent/kafka/schemaregistry/storage/exceptions/SerializationException.java",
        "src/main/java/io/confluent/kafka/schemaregistry/storage/exceptions/StoreException.java",
        "src/main/java/io/confluent/kafka/schemaregistry/storage/exceptions/StoreInitializationException.java",
        "src/main/java/io/confluent/kafka/schemaregistry/storage/exceptions/StoreTimeoutException.java",
        "src/main/java/io/confluent/kafka/schemaregistry/storage/serialization/SchemaRegistrySerializer.java",
        "src/main/java/io/confluent/kafka/schemaregistry/storage/serialization/Serializer.java",
        "src/main/java/io/confluent/kafka/schemaregistry/tools/SchemaRegistryClientPerformance.java",
        "src/main/java/io/confluent/kafka/schemaregistry/tools/SchemaRegistryPerformance.java",
        "src/main/java/io/confluent/kafka/schemaregistry/utils/AppInfoParser.java",
        "src/main/java/io/confluent/kafka/schemaregistry/utils/ShutdownableThread.java",
    ],
    resources = glob(["src/main/resources/*"]),
    visibility = ["//:__subpackages__"],
    exports = [
        "//client",
        "@maven//:com_google_crypto_tink_tink",
        "@maven//:io_confluent_rest_utils",
        "@maven//:org_apache_kafka_kafka_clients",
        "@maven//:org_eclipse_jetty_jetty_util",
    ],
    deps = [
        "//client",
        "//json-schema-provider",
        "//protobuf-provider",
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
        "@maven//:com_fasterxml_jackson_core_jackson_core",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_google_crypto_tink_tink",
        "@maven//:com_google_guava_guava",
        "@maven//:com_google_protobuf_protobuf_java",
        "@maven//:io_confluent_common_utils",
        "@maven//:io_confluent_rest_utils",
        "@maven//:io_kcache_kcache",
        "@maven//:io_swagger_core_v3_swagger_annotations",
        "@maven//:io_swagger_core_v3_swagger_core",
        "@maven//:jakarta_ws_rs_jakarta_ws_rs_api",
        "@maven//:javax_annotation_javax_annotation_api",
        "@maven//:javax_servlet_javax_servlet_api",
        "@maven//:javax_validation_validation_api",
        "@maven//:org_apache_avro_avro",
        "@maven//:org_apache_kafka_kafka_2_13",
        "@maven//:org_apache_kafka_kafka_clients",
        "@maven//:org_eclipse_jetty_jetty_http",
        "@maven//:org_eclipse_jetty_jetty_server",
        "@maven//:org_eclipse_jetty_jetty_servlet",
        "@maven//:org_eclipse_jetty_jetty_util",
        "@maven//:org_hibernate_validator_hibernate_validator",
        "@maven//:org_scala_lang_scala_library",
        "@maven//:org_slf4j_slf4j_api",
    ],
)

java_binary(
    name = "Main",
    main_class = "io.confluent.kafka.schemaregistry.rest.Main",
    visibility = ["//visibility:public"],
    runtime_deps = [":core"],
)

java_binary(
    name = "SchemaRegistryConfig",
    main_class = "io.confluent.kafka.schemaregistry.rest.SchemaRegistryConfig",
    visibility = ["//visibility:public"],
    runtime_deps = [":core"],
)

java_binary(
    name = "SchemaRegistryMain",
    main_class = "io.confluent.kafka.schemaregistry.rest.SchemaRegistryMain",
    visibility = ["//visibility:public"],
    runtime_deps = [":core"],
)

java_binary(
    name = "SchemaRegistryClientPerformance",
    main_class = "io.confluent.kafka.schemaregistry.tools.SchemaRegistryClientPerformance",
    visibility = ["//visibility:public"],
    runtime_deps = [":core"],
)

java_binary(
    name = "SchemaRegistryPerformance",
    main_class = "io.confluent.kafka.schemaregistry.tools.SchemaRegistryPerformance",
    visibility = ["//visibility:public"],
    runtime_deps = [":core"],
)

avro_java_library(
    name = "avro-resources",
    srcs = [
        "src/test/avro/asubrecord.avsc",
        "src/test/avro/record.avsc",
    ],
    files_not_dirs = True,
)

java_library(
    name = "test-utils",
    srcs = [
        "src/test/java/io/confluent/kafka/schemaregistry/ClusterTestHarness.java",
        "src/test/java/io/confluent/kafka/schemaregistry/LeaderElectorTest.java",
        "src/test/java/io/confluent/kafka/schemaregistry/RestApp.java",
        "src/test/java/io/confluent/kafka/schemaregistry/SASLClusterTestHarness.java",
        "src/test/java/io/confluent/kafka/schemaregistry/SSLClusterTestHarness.java",
        "src/test/java/io/confluent/kafka/schemaregistry/rest/SecureTestUtils.java",
        "src/test/java/io/confluent/kafka/schemaregistry/rest/json/RestApiTest.java",
        "src/test/java/io/confluent/kafka/schemaregistry/rest/protobuf/RestApiTest.java",
        "src/test/java/io/confluent/kafka/schemaregistry/storage/KafkaStoreSSLAuthTest.java",
        "src/test/java/io/confluent/kafka/schemaregistry/storage/StoreUtils.java",
        "src/test/java/io/confluent/kafka/schemaregistry/storage/StringMessageHandler.java",
        "src/test/java/io/confluent/kafka/schemaregistry/storage/StringSerializer.java",
        "src/test/java/io/confluent/kafka/schemaregistry/testutil/MockSchemaRegistryTest.java",
        "src/test/java/io/confluent/kafka/schemaregistry/utils/ResourceLoader.java",
        "src/test/java/io/confluent/kafka/schemaregistry/utils/TestUtils.java",
        "src/test/java/io/confluent/kafka/serializers/protobuf/test/Ref.java",
        "src/test/java/io/confluent/kafka/serializers/protobuf/test/Root.java",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":core",
        "//avro-serializer",
        "//client",
        "//json-schema-provider",
        "//protobuf-provider",
        "//schema-serializer",
        "@@maven//:com_fasterxml_jackson_core_jackson_core",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_fasterxml_jackson_dataformat_jackson_dataformat_csv",
        "@maven//:com_google_guava_guava",
        "@maven//:com_google_protobuf_protobuf_java",
        "@maven//:com_squareup_wire_wire_schema_jvm",
        "@maven//:io_confluent_common_utils",
        "@maven//:io_confluent_rest_utils",
        "@maven//:io_kcache_kcache",
        "@maven//:junit_junit",
        "@maven//:org_apache_avro_avro",
        "@maven//:org_apache_kafka_kafka_2_13",
        "@maven//:org_apache_kafka_kafka_2_13_test",
        "@maven//:org_apache_kafka_kafka_clients",
        "@maven//:org_apache_kafka_kafka_clients_test",
        "@maven//:org_easymock_easymock",
        "@maven//:org_eclipse_jetty_jetty_http",
        "@maven//:org_eclipse_jetty_jetty_server",
        "@maven//:org_mockito_mockito_core",
        "@maven//:org_scala_lang_scala_library",
        "@maven//:org_slf4j_slf4j_api",
    ],
)

java_test_suite(
    name = "core-tests",
    srcs = [
        "src/test/java/io/confluent/kafka/schemaregistry/avro/AvroCompatibilityTest.java",
        "src/test/java/io/confluent/kafka/schemaregistry/client/CachedSchemaRegistryClientTest.java",
        "src/test/java/io/confluent/kafka/schemaregistry/client/MockSchemaRegistryClientTest.java",
        "src/test/java/io/confluent/kafka/schemaregistry/leaderelector/kafka/SchemaRegistryCoordinatorTest.java",
        "src/test/java/io/confluent/kafka/schemaregistry/leaderelector/kafka/SchemaRegistryProtocolTest.java",
        "src/test/java/io/confluent/kafka/schemaregistry/metrics/CustomSchemaProviderMetricTest.java",
        "src/test/java/io/confluent/kafka/schemaregistry/metrics/MetricsTest.java",
        "src/test/java/io/confluent/kafka/schemaregistry/rest/RequestHeaderBuilderTest.java",
        "src/test/java/io/confluent/kafka/schemaregistry/rest/RestApiCompatibilityTest.java",
        "src/test/java/io/confluent/kafka/schemaregistry/rest/RestApiContextTest.java",
        "src/test/java/io/confluent/kafka/schemaregistry/rest/RestApiMetadataEncoderTest.java",
        "src/test/java/io/confluent/kafka/schemaregistry/rest/RestApiModeTest.java",
        "src/test/java/io/confluent/kafka/schemaregistry/rest/RestApiSchemaTooLargeTest.java",
        "src/test/java/io/confluent/kafka/schemaregistry/rest/RestApiSslTest.java",
        "src/test/java/io/confluent/kafka/schemaregistry/rest/RestApiTest.java",
        "src/test/java/io/confluent/kafka/schemaregistry/rest/RestApiTransitiveCompatibilityTest.java",
        "src/test/java/io/confluent/kafka/schemaregistry/rest/SchemaRegistryConfigTest.java",
        "src/test/java/io/confluent/kafka/schemaregistry/rest/SchemaRegistryErrorHandlerTest.java",
        "src/test/java/io/confluent/kafka/schemaregistry/rest/SchemaRegistryExtensionTest.java",
        "src/test/java/io/confluent/kafka/schemaregistry/rest/filters/ContextFilterTest.java",
        "src/test/java/io/confluent/kafka/schemaregistry/rest/protobuf/RestApiTest.java",
        "src/test/java/io/confluent/kafka/schemaregistry/storage/KafkaStoreReaderThreadTest.java",
        "src/test/java/io/confluent/kafka/schemaregistry/storage/KafkaStoreSASLTest.java",
        "src/test/java/io/confluent/kafka/schemaregistry/storage/KafkaStoreSSLNoAuthTest.java",
        "src/test/java/io/confluent/kafka/schemaregistry/storage/KafkaStoreTest.java",
        "src/test/java/io/confluent/kafka/schemaregistry/storage/OffsetCheckpointTest.java",
        "src/test/java/io/confluent/kafka/schemaregistry/storage/SchemaRegistryKeysTest.java",
        "src/test/java/io/confluent/kafka/schemaregistry/storage/SchemaValuesTest.java",
        "src/test/java/io/confluent/kafka/schemaregistry/storage/encoder/MetadataEncoderServiceTest.java",
    ],
    data = glob(["test/resources/*"]),
    runtime_deps = [
        "@maven//:org_slf4j_slf4j_reload4j",
    ],
    deps = [
        ":avro-resources",
        ":core",
        ":test-utils",
        "//avro-serializer",
        "//client",
        "//core/src/test/proto:io_confluent_kafka_serializers_protobuf_test_java_library",
        "//json-schema-provider",
        "//protobuf-provider",
        "//schema-serializer",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_fasterxml_jackson_dataformat_jackson_dataformat_csv",
        "@maven//:com_google_guava_guava",
        "@maven//:com_google_protobuf_protobuf_java",
        "@maven//:com_squareup_okio_okio_jvm",
        "@maven//:com_squareup_wire_wire_schema_jvm",
        "@maven//:io_confluent_common_utils",
        "@maven//:io_confluent_rest_utils",
        "@maven//:io_kcache_kcache",
        "@maven//:jakarta_ws_rs_jakarta_ws_rs_api",
        "@maven//:junit_junit",
        "@maven//:org_apache_avro_avro",
        "@maven//:org_apache_directory_api_api_all",
        "@maven//:org_apache_directory_server_apacheds_interceptor_kerberos",
        "@maven//:org_apache_directory_server_apacheds_ldif_partition",
        "@maven//:org_apache_directory_server_apacheds_protocol_kerberos",
        "@maven//:org_apache_directory_server_apacheds_protocol_ldap",
        "@maven//:org_apache_kafka_kafka_2_13",
        "@maven//:org_apache_kafka_kafka_2_13_test",
        "@maven//:org_apache_kafka_kafka_clients",
        "@maven//:org_apache_kafka_kafka_clients_test",
        "@maven//:org_bouncycastle_bcpkix_jdk15on",
        "@maven//:org_easymock_easymock",
        "@maven//:org_eclipse_jetty_jetty_http",
        "@maven//:org_eclipse_jetty_jetty_server",
        "@maven//:org_mockito_mockito_core",
        "@maven//:org_scala_lang_scala_library",
        "@maven//:org_slf4j_slf4j_api",
    ],
)
